--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,7 @@
     },
     "autoload-dev": {
         "psr-4": {
-            "Tests\\": "tests/"
+            "Blueprint\\Tests\\": "tests/"
         }
     },
     "extra": {
