--- a/tests/fixtures/drafts/model-reference-validate.yaml
+++ b/tests/fixtures/drafts/model-reference-validate.yaml
@@ -1,7 +1,7 @@
 models:
   Certificate:
     name: string
-    certificate_type_id: id
+    certificate_type_id: id:certificate_type
     reference: string
     document: string
     expiry_date: date
