--- a/composer.json
+++ b/composer.json
@@ -28,7 +28,10 @@
     "autoload-dev": {
         "psr-4": {
             "Tests\\": "tests/"
-        }
+        },
+        "exclude-from-classmap": [
+            "*/tests/fixtures/*"
+        ]
     },
     "config": {
         "sort-packages": true
