--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -77,20 +77,42 @@ jobs:
           coverage: none
           ini-values: "memory_limit=-1"
 
+      - name: Setup problem matchers for PHP
+        run: echo "::add-matcher::${{ runner.tool_cache }}/php.json"
+
+      - name: Setup problem matchers for PHPUnit
+        run: echo "::add-matcher::${{ runner.tool_cache }}/phpunit.json"
+
       - name: Install highest dependencies from composer.json
         if: matrix.dependencies == 'highest'
-        run: composer config platform --unset && composer update ${{ env.COMPOSER_FLAGS }}
+        uses: nick-invision/retry@v1
+        with:
+          timeout_minutes: 5
+          max_attempts: 5
+          command: composer config platform --unset && composer update ${{ env.COMPOSER_FLAGS }}
 
       - name: Install lowest dependencies from composer.json
         if: matrix.dependencies == 'lowest'
-        run: composer install ${{ env.COMPOSER_FLAGS }} --prefer-lowest
+        uses: nick-invision/retry@v1
+        with:
+          timeout_minutes: 5
+          max_attempts: 5
+          command: composer install ${{ env.COMPOSER_FLAGS }} --prefer-lowest
 
       - name: Install dependencies from composer.lock
         if: matrix.dependencies == 'locked'
-        run: composer install ${{ env.COMPOSER_FLAGS }}
+        uses: nick-invision/retry@v1
+        with:
+          timeout_minutes: 5
+          max_attempts: 5
+          command: composer install ${{ env.COMPOSER_FLAGS }}
 
       - name: Select Laravel version
-        run: composer require "laravel/framework:${{ matrix.laravel-version }}.*" --no-update
+        uses: nick-invision/retry@v1
+        with:
+          timeout_minutes: 5
+          max_attempts: 5
+          command: composer require "laravel/framework:${{ matrix.laravel-version }}.*" --no-update
 
       - name: Run tests
         run: vendor/bin/phpunit --verbose
