--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -127,7 +127,7 @@ jobs:
           COVERALLS_REPO_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           COVERALLS_SERVICE_JOB_ID: ${{ github.run_id }}
         run: |
-          composer global twinh/php-coveralls ${{ env.COMPOSER_FLAGS }};
+          composer require twinh/php-coveralls ${{ env.COMPOSER_FLAGS }};
           vendor/bin/php-coveralls --coverage_clover=clover.xml -v;
 
   coveralls:
