--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -127,9 +127,8 @@ jobs:
           COVERALLS_REPO_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           COVERALLS_SERVICE_JOB_ID: ${{ github.run_id }}
         run: |
-          composer require twinh/php-coveralls -n;
-          cat clover.xml;
-          vendor/bin/php-coveralls --json_path=coveralls.json --coverage_clover=clover.xml -v;
+          composer global require twinh/php-coveralls -n;
+          php-coveralls --json_path=coveralls.json --coverage_clover=clover.xml -v;
 
   coveralls:
     needs: tests
