--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,7 +16,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        php-version: [7.4, 8.0]
+        php-version: [7.3, 7.4, 8.0]
 
         os: [ubuntu-latest, windows-latest, macos-latest]
 
