--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,13 @@
     "require-dev": {
         "mockery/mockery": "^1.3",
         "orchestra/testbench": "^6.0",
-        "phpunit/phpunit": "^9.3"
+        "phpunit/phpunit": "^9.3",
+        "pestphp/pest": "^1.21",
+        "pestphp/pest-plugin-parallel": "^1.0"
+    },
+    "scripts": {
+        "test": "./vendor/bin/phpunit",
+        "pest": "./vendor/bin/pest -p"
     },
     "suggest": {
         "jasonmccreary/laravel-test-assertions": "Required to use additional assertions in generated tests (^1.0)."
