--- a/tests/fixtures/drafts/readme-example.yaml
+++ b/tests/fixtures/drafts/readme-example.yaml
@@ -19,3 +19,7 @@ controllers:
       fire: NewPost with:post
       flash: post.title
       redirect: post.index
+
+config:
+    namespace: MyAppNamespace
+    models_namespace: MyAppModels
