--- a/composer.json
+++ b/composer.json
@@ -8,17 +8,17 @@
     ],
     "license": "MIT",
     "require": {
-        "doctrine/dbal": "^2.9 || ^3.0",
-        "illuminate/console": "^8.0",
-        "illuminate/filesystem": "^8.0",
-        "illuminate/support": "^8.0",
+        "doctrine/dbal": "^3.3",
+        "illuminate/console": "^9.0",
+        "illuminate/filesystem": "^9.0",
+        "illuminate/support": "^9.0",
         "laravel-shift/faker-registry": "^0.1",
         "symfony/yaml": "^5.1.4"
     },
     "require-dev": {
-        "mockery/mockery": "^1.3",
-        "orchestra/testbench": "^6.0",
-        "phpunit/phpunit": "^9.3"
+        "mockery/mockery": "^1.4.4",
+        "orchestra/testbench": "dev-remove-nice-to-have-deps",
+        "phpunit/phpunit": "^9.5.10"
     },
     "suggest": {
         "jasonmccreary/laravel-test-assertions": "Required to use additional assertions in generated tests (^1.0)."
