Allow dev dependencies

--- a/composer.json
+++ b/composer.json
@@ -42,5 +42,7 @@
         "psr-4": {
             "Tests\\": "tests/"
         }
-    }
+    },
+    "minimum-stability": "dev",
+    "prefer-stable": true
 }
