--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,7 +16,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        php-version: ['8.1'. '8.2']
+        php-version: ['8.1', '8.2']
 
         os: [ubuntu-latest, windows-latest, macos-latest]
 
