--- a/composer.json
+++ b/composer.json
@@ -2,23 +2,20 @@
     "name": "laravel-shift/blueprint",
     "type": "library",
     "description": "An expressive, human readable code generation tool.",
-    "keywords": [
-        "framework",
-        "laravel"
-    ],
+    "keywords": ["framework", "laravel", "code generation"],
     "license": "MIT",
     "require": {
         "doctrine/dbal": "^3.3",
-        "illuminate/console": "^9.0|^10.0",
-        "illuminate/filesystem": "^9.0|^10.0",
-        "illuminate/support": "^9.0|^10.0",
+        "illuminate/console": "^10.0",
+        "illuminate/filesystem": "^10.0",
+        "illuminate/support": "^10.0",
         "laravel-shift/faker-registry": "^0.2.0",
-        "symfony/yaml": "^6.0"
+        "symfony/yaml": "^6.3"
     },
     "require-dev": {
         "laravel/pint": "^1.2",
         "mockery/mockery": "^1.4.4",
-        "orchestra/testbench": "^7.0|^8.0",
+        "orchestra/testbench": "^8.0",
         "phpunit/phpunit": "^9.5.10"
     },
     "suggest": {
