--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,18 +16,13 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        php-version: [8.0, 8.1]
-
+        php-version: ['8.1', '8.2']
         os: [ubuntu-latest, windows-latest, macos-latest]
-
         dependencies: [locked]
-
         experimental: [false]
 
     name: PHP ${{ matrix.php-version }} - ${{ matrix.os }}
-
     runs-on: ${{ matrix.os }}
-
     continue-on-error: ${{ matrix.experimental }}
 
     steps:
