Remove verbose option

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -82,4 +82,4 @@ jobs:
         run: composer require laravel/framework --no-update
 
       - name: Run tests
-        run: vendor/bin/phpunit --verbose
+        run: vendor/bin/phpunit
