--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -9,15 +9,13 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
-      - name: Testing
-        run: echo "$GITHUB_BASE_REF"
       - name: Setup PHP
         uses: shivammathur/setup-php@v2
         with:
           php-version: '8.1'
           tools: phplint, laravel/pint
       - name: Changes
-        run: git diff --name-status $GITHUB_BASE_REF..HEAD
+        run: git diff --name-status $GITHUB_BASE_REF..$GITHUB_HEAD_REF
       - name: Check syntax
         run: phplint .
       - name: Check code style
