--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -9,6 +9,8 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
+      - name: HEAD
+        run: git show --name-status
       - name: Ref
         run: git show --name-status $GITHUB_REF
       - name: Setup PHP
