Add ULID support to FactoryGenerator and tests
ULID column type has been added to the FactoryGenerator and corresponding tests. This update augments the list of column data types that can be used, particularly aiding situations where a universally unique lexicographically sortable identifier (ULID) is required. Test fixtures are updated to validate this new addition.

--- a/tests/fixtures/drafts/all-column-types.yaml
+++ b/tests/fixtures/drafts/all-column-types.yaml
@@ -50,5 +50,6 @@ models:
     unsignedMediumInteger: unsignedMediumInteger
     unsignedSmallInteger: unsignedSmallInteger
     unsignedTinyInteger: unsignedTinyInteger
+    ulid: ulid
     uuid: uuid
     year: year
