--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
         "illuminate/filesystem": "^10.0",
         "illuminate/support": "^10.0",
         "laravel-shift/faker-registry": "^0.3.0",
-        "symfony/yaml": "^6.2"
+        "symfony/yaml": ">=6.2"
     },
     "require-dev": {
         "laravel/pint": "^1.2",
