Add support for `nullableUlidMorphs` and `ulidMorphs` column types
The `nullableUlidMorphs` and `ulidMorphs` column types have been added to the `all-column-types` test fixtures and model generator. The appropriate handling for these new column types were added to the `ModelGenerator` PHP class. This addition ensures that these column types are properly processed and reflected in the models.

--- a/tests/fixtures/drafts/all-column-types.yaml
+++ b/tests/fixtures/drafts/all-column-types.yaml
@@ -31,6 +31,7 @@ models:
     multiPoint: multiPoint
     multiPolygon: multiPolygon
     nullableMorphs: nullableMorphs
+    nullableUlidMorphs: nullableUuidMorphs
     nullableUuidMorphs: nullableUuidMorphs
     nullableTimestamps: nullableTimestamps
     point: point
