refactor(fixtures): update the verbose `id: ulid primary`  from fixtures to the shorthand `ulid`

--- a/tests/fixtures/drafts/belongs-to-many-using-ulids.yaml
+++ b/tests/fixtures/drafts/belongs-to-many-using-ulids.yaml
@@ -1,11 +1,11 @@
 models:
   Journey:
-    id: ulid primary
+    ulid
     name: string
     user_id: ulid foreign
     relationships:
       belongsToMany: Diary
   Diary:
-    id: ulid primary
+    ulid
     relationships:
       belongsToMany: Journey
