--- a/composer.json
+++ b/composer.json
@@ -10,9 +10,9 @@
     "license": "MIT",
     "require": {
         "doctrine/dbal": "^3.3",
-        "illuminate/console": "^10.0",
-        "illuminate/filesystem": "^10.0",
-        "illuminate/support": "^10.0",
+        "illuminate/console": "^10.0|^11.0",
+        "illuminate/filesystem": "^10.0|^11.0",
+        "illuminate/support": "^10.0|^11.0",
         "laravel-shift/faker-registry": "^0.3.0",
         "symfony/yaml": ">=6.2"
     },
