--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -28,6 +28,9 @@ jobs:
         php-version: ['8.1', '8.2']
         laravel-version: [10, 11]
         os: [ubuntu-latest]
+        exclude:
+          - laravel: 11.*
+            php-version: 8.1
 
     runs-on: ${{ matrix.os }}
 
