--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,15 +13,20 @@ env:
 
 jobs:
   tests:
+    name: PHP ${{ matrix.php-version }} - L${{ matrix.laravel-version }} - ${{ matrix.os }}
+
     strategy:
       fail-fast: false
       matrix:
-        php-version: ['8.1', '8.2']
+        php-version: ['8.1', '8.2', '8.3']
+        laravel-version: [10, 11]
         os: [ubuntu-latest, windows-latest, macos-latest]
         dependencies: [locked]
         experimental: [false]
+        exclude:
+          - laravel-version: 11
+            php-version: 8.1
 
-    name: PHP ${{ matrix.php-version }} - ${{ matrix.os }}
     runs-on: ${{ matrix.os }}
     continue-on-error: ${{ matrix.experimental }}
 
@@ -37,8 +42,8 @@ jobs:
         uses: actions/cache@v2
         with:
           path: ${{ steps.determine-composer-cache-directory.outputs.directory }}
-          key: dependencies-os-${{ matrix.os }}-php-${{ matrix.php-version }}-composer-${{ hashFiles('**/composer.lock') }}
-          restore-keys: dependencies-os-${{ matrix.os }}-php-${{ matrix.php-version }}-composer-
+          key: dependencies-os-${{ matrix.os }}-php-${{ matrix.php-version }}-laravel-${{ matrix.laravel-version }}-composer-${{ hashFiles('**/composer.lock') }}
+          restore-keys: dependencies-os-${{ matrix.os }}-php-${{ matrix.php-version }}-laravel-${{ matrix.laravel-version }}-composer-
 
       - name: Setup PHP
         uses: shivammathur/setup-php@v2
@@ -79,7 +84,7 @@ jobs:
           command: composer install ${{ env.COMPOSER_FLAGS }}
 
       - name: Install Laravel
-        run: composer require laravel/framework --no-update
+        run: composer require laravel/framework:${{ matrix.laravel-version }}.* --no-update
 
       - name: Run tests
         run: vendor/bin/phpunit
