--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -25,9 +25,12 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        php-version: ['8.1', '8.2']
-        laravel-version: [10]
+        php-version: ['8.1', '8.2', '8.3']
+        laravel-version: [10, 11]
         os: [ubuntu-latest]
+        exclude:
+          - laravel: 11.*
+            php-version: 8.1
 
     runs-on: ${{ matrix.os }}
 
