Remove DBAL for Laravel 11

--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,7 @@
     "require-dev": {
         "laravel/pint": "^1.2",
         "mockery/mockery": "^1.4.4",
-        "orchestra/testbench": "^8.0",
+        "orchestra/testbench": "^8.0|^9.0",
         "phpunit/phpunit": "^10.0"
     },
     "suggest": {
