--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -49,8 +49,8 @@ jobs:
         uses: actions/cache@v2
         with:
           path: ${{ steps.determine-composer-cache-directory.outputs.directory }}
-          key: dependencies-os-${{ matrix.os }}-php-${{ matrix.php-version }}-laravel-${{ matrix.laravel-version }}-composer-${{ hashFiles('**/composer.lock') }}
-          restore-keys: dependencies-os-${{ matrix.os }}-php-${{ matrix.php-version }}-laravel-${{ matrix.laravel-version }}-composer-
+          key: dependencies-os-${{ matrix.os }}-php-${{ matrix.php-version }}-laravel-${{ matrix.laravel-version }}-prefer-stable-composer-${{ hashFiles('**/composer.lock') }}
+          restore-keys: dependencies-os-${{ matrix.os }}-php-${{ matrix.php-version }}-laravel-${{ matrix.laravel-version }}-prefer-stable-composer-
 
       - name: Setup PHP
         uses: shivammathur/setup-php@v2
