Tweak lowest version

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,11 +22,13 @@ jobs:
         php-version: ['8.1', '8.2', '8.3']
         laravel-version: [10, 11]
         os: [ubuntu-latest, windows-latest, macos-latest]
-        stability: [prefer-stable]
+        stability: [prefer-lowest, prefer-stable]
         experimental: [false]
         exclude:
           - laravel-version: 11
             php-version: 8.1
+          - laravel-version: 11
+            stability: prefer-lowest
 
     runs-on: ${{ matrix.os }}
     continue-on-error: ${{ matrix.experimental }}
