--- a/composer.json
+++ b/composer.json
@@ -9,17 +9,17 @@
     ],
     "license": "MIT",
     "require": {
-        "doctrine/dbal": "^3.3",
-        "illuminate/console": "^10.0|^11.0",
-        "illuminate/filesystem": "^10.0|^11.0",
-        "illuminate/support": "^10.0|^11.0",
+        "illuminate/console": "^10.38|^11.0",
+        "illuminate/database": "^10.38|^11.0",
+        "illuminate/filesystem": "^10.38|^11.0",
+        "illuminate/support": "^10.38|^11.0",
         "laravel-shift/faker-registry": "^0.3.0",
         "symfony/yaml": ">=6.2"
     },
     "require-dev": {
         "laravel/pint": "^1.2",
         "mockery/mockery": "^1.4.4",
-        "orchestra/testbench": "^8.0",
+        "orchestra/testbench": "^8.0|^9.0",
         "phpunit/phpunit": "^10.0"
     },
     "suggest": {
