WIP: demo workflow

--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -93,4 +93,5 @@ jobs:
           php artisan blueprint:trace
 
       - name: Output the trace
+        working-directory: /home/runner/work/blueprint/laravel${{ matrix.laravel-version }}-example
         run: cat .blueprint
