--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -87,11 +87,8 @@ jobs:
           DB_USERNAME: root
           DB_PASSWORD: 'null'
         run: |
+          cp /home/runner/work/blueprint/blueprint/tests/fixtures/integration/TraceTest.php tests/Feature/TraceTest.php
           php artisan migrate:refresh --force
           php artisan blueprint:build /home/runner/work/blueprint/blueprint/tests/fixtures/drafts/readme-example.yaml
-          php artisan test
           php artisan blueprint:trace
-
-      - name: Output the trace
-        working-directory: /home/runner/work/blueprint/laravel${{ matrix.laravel-version }}-example
-        run: cat .blueprint
+          php artisan test
