--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -1,12 +1,14 @@
 name: Demo
 
 on:
+  schedule:
+    - cron: '0 0 * * *'
   workflow_dispatch:
     inputs:
       ref:
         description: "The branch, tag or SHA to checkout."
         required: false
-        default: ""
+        default: ''
 
 jobs:
   build:
