Re-apply fixes from #661 (#681)

--- a/tests/fixtures/drafts/belongs-to-many-using-uuids.yaml
+++ b/tests/fixtures/drafts/belongs-to-many-using-uuids.yaml
@@ -1,6 +1,10 @@
 models:
   Journey:
+    uuid
     name: string
-    user_id: id
     relationships:
       belongsToMany: Diary
+  Diary:
+    uuid
+    relationships:
+      belongsToMany: Journey
