--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -28,10 +28,10 @@ jobs:
       fail-fast: false
       matrix:
         php-version: ['8.1', '8.2', '8.3']
-        laravel-version: ['10', 'dev-master']
+        laravel-version: ['10', '11']
         os: [ubuntu-latest]
         exclude:
-          - laravel-version: dev-master
+          - laravel-version: 11
             php-version: 8.1
 
     runs-on: ${{ matrix.os }}
