--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
         "symfony/yaml": ">=6.2"
     },
     "require-dev": {
-        "laravel/pint": "^1.2",
+        "laravel/pint": "~1.18.0",
         "mockery/mockery": "^1.4.4",
         "orchestra/testbench": "^8.0|^9.0",
         "phpunit/phpunit": "^10.0"
