Using Inertia-formatted names of views in tests

--- a/tests/fixtures/drafts/inertia-render.yaml
+++ b/tests/fixtures/drafts/inertia-render.yaml
@@ -2,4 +2,4 @@ controllers:
   Customer:
     show:
       query: all
-      inertia: customer.show with:customer,customers
+      inertia: Customer/Show with:customer,customers
