--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -20,7 +20,7 @@ jobs:
       fail-fast: false
       matrix:
         php-version: ['8.2', '8.3', '8.4']
-        laravel-version: [11, 12]
+        laravel-version: [12]
         os: [ubuntu-latest, windows-latest, macos-latest]
         stability: [prefer-lowest, prefer-stable]
         experimental: [false]
