--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -28,7 +28,7 @@ jobs:
       fail-fast: false
       matrix:
         php-version: ['8.2', '8.3', '8.4']
-        laravel-version: [11, 12]
+        laravel-version: [12]
         os: [ubuntu-latest]
 
     runs-on: ${{ matrix.os }}
